# src/app/user/user.router.ts
@@ -1,8 +1,8 @@
 import { Body, Controller, Delete, Get, Post, Put, Query, Route, Tags } from 'tsoa';
-import { getAllUser, createUser, updateUser, deleteUser } from './user.service';
+import { getAllUser, createUser, updateUser, deleteUser, IUser } from './user.service';
 
-@Tags('User Permission')
-@Route('/api/user-permission')
+@Tags('User')
+@Route('/api/user')
 export class UserPermissionController extends Controller {
 
   @Get('/get-all/')
@@ -11,18 +11,18 @@ export class UserPermissionController extends Controller {
   }
 
   @Post('/create/')
-  public async createUser(@Body() body: { email: string, roles: string[] }) {
-    return createUser({ email: body.email, roles: body.roles });
+  public async createUser(@Body() body: IUser) {
+    return createUser({ email: body.email, paymentIDs: body.paymentIDs, firstName:body.firstName, lastName:body.lastName, type:body.type, phoneNumber:body.phoneNumber, location:body.location });
   }
 
   @Put('/update/{id}/')
-  public async updateUser(@Query('id') id: string, @Body() body: { email: string, roles: string[] }) {
-    return updateUser({ id: Number(id), email: body.email, roles: body.roles });
+  public async updateUser(@Query('id') id: string, @Body() body: IUser) {
+    return updateUser({ id: String(id), email: body.email, paymentIDs: body.paymentIDs, firstName:body.firstName, lastName:body.lastName, type:body.type, phoneNumber:body.phoneNumber, location:body.location });
   }
 
   @Delete('/delete/{id}/')
   public async deleteUser(@Query('id') id: string) {
-    return deleteUser({ id: Number(id) });
+    return deleteUser({ id: String(id) });
   }
 
 }
