# src/database/entity/user.ts
@@ -1,16 +1,40 @@
-import { Entity, PrimaryGeneratedColumn, Column, OneToMany, BaseEntity } from "typeorm";
-import { Role } from './role';
+import { Entity, PrimaryGeneratedColumn, Column, OneToMany, BaseEntity, JoinTable } from "typeorm";
+import { Payment } from './payment';
+
+export type UserType = "admin" | "user";
+
 
 @Entity({ name: 'user' })
 export class User extends BaseEntity {
 
-  @PrimaryGeneratedColumn()
-  id: number;
+  @PrimaryGeneratedColumn("uuid")
+  id: string;
 
   @Column({ unique: true })
   email: string;
 
-  @OneToMany(() => Role, (role: Role) => role.user, { onDelete: 'CASCADE' })
-  roles: Role[];
+  @Column()
+  firstName: string;
+
+  @Column()
+  lastName: string;
+
+  @Column(
+//     {
+//     type: "enum",
+//     enum: ["admin", "user"],
+//     default:  "user"
+// }
+)
+  type: "admin" | "user"
+
+  @Column()
+  phoneNumber: string;
+
+  @Column()
+  location: string;
+
+  @OneToMany(() => Payment, (payment: Payment) => payment.user, { onDelete: 'CASCADE' })
+  payments: Payment[] ;
 
 }
