# tsoa/swagger.json
@@ -5,7 +5,81 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"IPayment": {
+				"properties": {
+					"cardNumber": {
+						"type": "string"
+					},
+					"userID": {
+						"type": "string"
+					},
+					"cvv": {
+						"type": "string"
+					},
+					"placeHolderName": {
+						"type": "string"
+					},
+					"receiver": {
+						"type": "string"
+					},
+					"expirationDate": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"cardNumber",
+					"cvv",
+					"placeHolderName",
+					"receiver",
+					"expirationDate"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IUser": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"paymentIDs": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string",
+						"enum": [
+							"admin",
+							"user"
+						]
+					},
+					"phoneNumber": {
+						"type": "string"
+					},
+					"location": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"firstName",
+					"lastName",
+					"type",
+					"phoneNumber",
+					"location"
+				],
+				"type": "object",
+				"additionalProperties": false
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -13,9 +87,9 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/api/user-permission/get-all": {
+		"/api/payment/get-all": {
 			"get": {
-				"operationId": "GetAllUser",
+				"operationId": "GetAllPayments",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -27,15 +101,15 @@
 					}
 				},
 				"tags": [
-					"User Permission"
+					"Payment"
 				],
 				"security": [],
 				"parameters": []
 			}
 		},
-		"/api/user-permission/create": {
+		"/api/payment/create": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "CreatePayment",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -47,7 +121,7 @@
 					}
 				},
 				"tags": [
-					"User Permission"
+					"Payment"
 				],
 				"security": [],
 				"parameters": [],
@@ -56,31 +130,16 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"roles": {
-										"items": {
-											"type": "string"
-										},
-										"type": "array"
-									},
-									"email": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"roles",
-									"email"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/IPayment"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/api/user-permission/update/{id}": {
+		"/api/payment/update/{id}": {
 			"put": {
-				"operationId": "UpdateUser",
+				"operationId": "UpdatePayment",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -92,7 +151,7 @@
 					}
 				},
 				"tags": [
-					"User Permission"
+					"Payment"
 				],
 				"security": [],
 				"parameters": [
@@ -110,29 +169,132 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"roles": {
-										"items": {
-											"type": "string"
-										},
-										"type": "array"
-									},
-									"email": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"roles",
-									"email"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/IPayment"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/api/user-permission/delete/{id}": {
+		"/api/payment/delete/{id}": {
+			"delete": {
+				"operationId": "DeletePayment",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Payment"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/user/get-all": {
+			"get": {
+				"operationId": "GetAllUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/user/create": {
+			"post": {
+				"operationId": "CreateUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IUser"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/user/update/{id}": {
+			"put": {
+				"operationId": "UpdateUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IUser"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/user/delete/{id}": {
 			"delete": {
 				"operationId": "DeleteUser",
 				"responses": {
@@ -146,7 +308,7 @@
 					}
 				},
 				"tags": [
-					"User Permission"
+					"User"
 				],
 				"security": [],
 				"parameters": [
